--- a/04-oop-basic-intro-to-dom/1-column-chart/index.html
+++ b/04-oop-basic-intro-to-dom/1-column-chart/index.html
@@ -39,9 +39,9 @@
         value: 321
       });
 
-      orders.append(ordersChart.element);
-      sales.append(salesChart.element);
-      customers.append(customersChart.element);
+      document.getElementById('orders').append(ordersChart.element);
+      sales.getElementById('sales').append(salesChart.element);
+      customers.getElementById('customers').append(customersChart.element);
     </script>
   </body>
 </html>
