--- a/04-oop-basic-intro-to-dom/1-column-chart/index.html
+++ b/04-oop-basic-intro-to-dom/1-column-chart/index.html
@@ -40,8 +40,8 @@
       });
 
       document.getElementById('orders').append(ordersChart.element);
-      sales.getElementById('sales').append(salesChart.element);
-      customers.getElementById('customers').append(customersChart.element);
+      document.getElementById('sales').append(salesChart.element);
+      document.getElementById('customers').append(customersChart.element);
     </script>
   </body>
 </html>
